Autosave is postponed by 10 seconds when a modal operator is running #77825

Closed
opened 2020-06-13 02:51:29 +02:00 by Tasha Upchurch · 29 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender does not auto save every minute as directed..
From the user's point of view this appears to be a random interval.

image.png

image.png
save test.blend

Exact steps for others to reproduce the error

  • change preference of time interval of save to 1 minute.
  • save preferences
  • close blender
  • reload blender
  • delete scene
  • add cube
  • save file as save test.blend
  • enter sculpt mode on cube
  • enable dyno topo
  • sculpt on cube for 10 minutes
  • notice that there are not 10 auto saves in the specified directory.
  • notice that there is only one.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender does not auto save every minute as directed.. From the user's point of view this appears to be a random interval. ![image.png](https://archive.blender.org/developer/F8613460/image.png) ![image.png](https://archive.blender.org/developer/F8613462/image.png) [save test.blend](https://archive.blender.org/developer/F8626047/save_test.blend) **Exact steps for others to reproduce the error** - change preference of time interval of save to 1 minute. - save preferences - close blender - reload blender - delete scene - add cube - save file as save test.blend - enter sculpt mode on cube - enable dyno topo - sculpt on cube for 10 minutes - notice that there are not 10 auto saves in the specified directory. - notice that there is only one.
Author

Added subscriber: @TashaSkyUp

Added subscriber: @TashaSkyUp

Added subscriber: @bent

Added subscriber: @bent

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Germano Cavalcante self-assigned this 2020-06-16 00:01:29 +02:00

The blender interface needs to update. If blender is minimized, for example, it does not automatically save.
This report does not contain all the requested information, which is required for us to investigate the issue.
It's missing:

  • Steps to reproduce the bug.

A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports

The blender interface needs to update. If blender is minimized, for example, it does not automatically save. This report does not contain all the requested information, which is required for us to investigate the issue. It's missing: - Steps to reproduce the bug. A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports
Germano Cavalcante was unassigned by Tasha Upchurch 2020-06-16 19:33:32 +02:00
Tasha Upchurch self-assigned this 2020-06-16 19:33:32 +02:00
Author

Why would you just assume the bug report is invalid. Rude. I'ts not invalid and now blender is going to be stuck with this bug because someone wanted to get some quick forum points or something.. this place is worse then stack exchange for people who are not part of the "system"

Why would you just assume the bug report is invalid. Rude. I'ts not invalid and now blender is going to be stuck with this bug because someone wanted to get some quick forum points or something.. this place is worse then stack exchange for people who are not part of the "system"
Author

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Author

Steps to reproduce:

  • change preference of time interval of save to 1 minute.
  • save preferences
  • close blender
  • reload blender
  • delete scene
  • add cube
  • save file as save test.blend
  • enter sculpt mode on cube
  • enable dyno topo
  • sculpt on cube for 10 minutes
  • notice that there are not 10 auto saves in the specified directory.
  • notice that there is only one.
  • take a chance and report bug
  • be rejected
Steps to reproduce: - change preference of time interval of save to 1 minute. - save preferences - close blender - reload blender - delete scene - add cube - save file as save test.blend - enter sculpt mode on cube - enable dyno topo - sculpt on cube for 10 minutes - notice that there are not 10 auto saves in the specified directory. - notice that there is only one. - take a chance and report bug - be rejected
Author

And this system we are on has no way for me to contact you directly so I have no idea if you will notice the changes to the report in order to set it to valid or whatever. Meaning I will have to go through the entire process of reporting the bug again.. This is a bad system.

And this system we are on has no way for me to contact you directly so I have no idea if you will notice the changes to the report in order to set it to valid or whatever. Meaning I will have to go through the entire process of reporting the bug again.. This is a bad system.

Added subscriber: @rjg

Added subscriber: @rjg

@TashaSkyUp Closing the bug report as invalid doesn't mean that we don't believe that there is an issue. It was closed because the report was missing steps to reproduce the problem. Without these steps it can be very difficult to identify the source of the issue and develop a patch. Therefore, it is in your own interest to provide all information that are requested in the submission template . Developers only have a limited time to deal with all reports, which is why incomplete ones will be closed.

@TashaSkyUp Closing the bug report as invalid doesn't mean that we don't believe that there is an issue. It was closed because the report was missing steps to reproduce the problem. Without these steps it can be very difficult to identify the source of the issue and develop a patch. Therefore, it is in your own interest to provide all information that are requested in the [submission template ](https://developer.blender.org/maniphest/task/edit/form/1/). Developers only have a limited time to deal with all reports, which is why incomplete ones will be closed.

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'
Tasha Upchurch was unassigned by Robert Guetzkow 2020-06-16 20:00:28 +02:00

In #77825#955171, @TashaSkyUp wrote:
Why would you just assume the bug report is invalid. Rude. I'ts not invalid and now blender is going to be stuck with this bug because someone wanted to get some quick forum points or something.. this place is worse then stack exchange for people who are not part of the "system"

Sorry for the inconvenience, there are dozens of reports open every day and this one was closed for two reasons:

  • At first glance it doesn't seem to be a bug (it's normal not to save in exactly 1 minute. And it wouldn't be efficient to autosave without need)
  • Fits the "Should Close Task Scenarios:" of the Triaging_Playbook

I forgot to add this text in the comment:

Please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, the last Blender version which worked, and a .blend file with exact steps to reproduce the problem.

Now looking at the image, I could see that the autosave intervals are less than 1 minute. I'll have a look to see what happens.

> In #77825#955171, @TashaSkyUp wrote: > Why would you just assume the bug report is invalid. Rude. I'ts not invalid and now blender is going to be stuck with this bug because someone wanted to get some quick forum points or something.. this place is worse then stack exchange for people who are not part of the "system" Sorry for the inconvenience, there are dozens of reports open every day and this one was closed for two reasons: - At first glance it doesn't seem to be a bug (it's normal not to save in exactly 1 minute. And it wouldn't be efficient to autosave without need) - Fits the `"Should Close Task Scenarios:"` of the [Triaging_Playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook) I forgot to add this text in the comment: > Please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, the last Blender version which worked, and a .blend file with exact steps to reproduce the problem. Now looking at the image, I could see that the autosave intervals are less than 1 minute. I'll have a look to see what happens.

In #77825#955205, @mano-wii wrote:
Now looking at the image, I could see that the autosave intervals are less than 1 minute. I'll have a look to see what happens.

I mistook hours for minutes. Autosave never runs before a minute apart.

Looking at the code I found this comment:

/* if a modal operator is running, don't autosave, but try again in 10 seconds */

It seems that this decision to wait 10 seconds if a modal operator is being executed, (as when using a brush), is a bad decision.
I'll see if I can improve this, but I still have doubts if this report should be confirmed as a bug.

https://developer.blender.org/diffusion/B/browse/master/source/blender/windowmanager/intern/wm_files.c$1606

> In #77825#955205, @mano-wii wrote: > Now looking at the image, I could see that the autosave intervals are less than 1 minute. I'll have a look to see what happens. I mistook hours for minutes. Autosave never runs before a minute apart. Looking at the code I found this comment: > /* if a modal operator is running, don't autosave, but try again in 10 seconds */ It seems that this decision to wait 10 seconds if a modal operator is being executed, (as when using a brush), is a bad decision. I'll see if I can improve this, but I still have doubts if this report should be confirmed as a bug. https://developer.blender.org/diffusion/B/browse/master/source/blender/windowmanager/intern/wm_files.c$1606
Author

You know what. Your right, saving while sculpting may create a hiccup on most systems and would be an undesirable behavior. I suppose "Auto save while sculpting" could be a feature request.. we can spend hours in sculpt mode... and crash while in it and loose the work.

You know what. Your right, saving while sculpting may create a hiccup on most systems and would be an undesirable behavior. I suppose "Auto save while sculpting" could be a feature request.. we can spend hours in sculpt mode... and crash while in it and loose the work.
Germano Cavalcante changed title from Blender does not auto save using the correct interval to Autosave is postponed by 10 seconds when a modal operator is running 2020-06-16 21:14:29 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

This behavior was implemented more than 10 years ago in cb8f7fd3

  • Autosave is postponed by 10 seconds when a modal operator is running, e.g. transform or file browsing.

@brecht, sorry back to this, I can imagine what led to that decision, but in my opinion the ideal thing would be to run the autosave the moment the modal operator concludes.
I investigated the code, maybe we can add a global flag to run the autosave in wm_handler_operator_call, but I don’t know if it’s that so simple.

I think it's quite possible for someone to work on sculpt for an hour in a row to miss all 10 second intervals between modal operators in the meantime.
We could skip the navigation modal at least.

This behavior was implemented more than 10 years ago in cb8f7fd3 > - Autosave is postponed by 10 seconds when a modal operator is running, e.g. transform or file browsing. @brecht, sorry back to this, I can imagine what led to that decision, but in my opinion the ideal thing would be to run the autosave the moment the modal operator concludes. I investigated the code, maybe we can add a global flag to run the autosave in `wm_handler_operator_call`, but I don’t know if it’s that so simple. I think it's quite possible for someone to work on sculpt for an hour in a row to miss all 10 second intervals between modal operators in the meantime. We could skip the navigation modal at least.

@mano-wii, yes, it would make sense to run auto save right after the last modal operator ends. Or maybe simpler is to temporarily set the timer interval to 10ms or so.

I think it's rather unlikely that you would sculpt an hour and miss all 10s intervals, but we should do better here..

@mano-wii, yes, it would make sense to run auto save right after the last modal operator ends. Or maybe simpler is to temporarily set the timer interval to 10ms or so. I think it's rather unlikely that you would sculpt an hour and miss all 10s intervals, but we should do better here..

This issue was referenced by 95ee06d068

This issue was referenced by 95ee06d068a6526ef773e2cb40420c744cf39e1e
Member

Added subscriber: @Imaginer

Added subscriber: @Imaginer
Member

@mano-wii & @brecht Don't know if this is relevant here, but I remember there was a bug or discussion about never ending modal operators and autosave a while back (I think the blenderkit addon uses one).

@mano-wii & @brecht Don't know if this is relevant here, but I remember there was a bug or discussion about never ending modal operators and autosave a while back (I think the blenderkit addon uses one).

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-06-30 18:12:44 +02:00

Added subscriber: @karab44

Added subscriber: @karab44

Hi guys! Any updates on this issue? Not only Blenderkit is facing the problems with autosave in modal mode.

Best Regards!
Albert

Hi guys! Any updates on this issue? Not only Blenderkit is facing the problems with autosave in modal mode. Best Regards! Albert

Added subscriber: @Dimitar

Added subscriber: @Dimitar

I am experiencing this issue with Blenderkit as well. Autosave hangs indefinitely. Seems the only way to allow autosave is to disable blenderkit. At the same time, sometime blenderkit causes Blender to crash but no autosave file to go back to.

I am experiencing this issue with Blenderkit as well. Autosave hangs indefinitely. Seems the only way to allow autosave is to disable blenderkit. At the same time, sometime blenderkit causes Blender to crash but no autosave file to go back to.

Added subscriber: @Ulf3000

Added subscriber: @Ulf3000

there are tons of addons which trigger autosave not working, this is a real problem almsot impossible to pin down if you have many addons installed, often its hard to reproduce and just starts not working out of nowwhere ,for example it worked before loading another file but not after , sometimes it works with addon x sometimes it doesnt .

this really need to be fixed before any new features , its so important. it has to be robust and not affected by anything, modals or not.

there are tons of addons which trigger autosave not working, this is a real problem almsot impossible to pin down if you have many addons installed, often its hard to reproduce and just starts not working out of nowwhere ,for example it worked before loading another file but not after , sometimes it works with addon x sometimes it doesnt . this really need to be fixed before any new features , its so important. it has to be robust and not affected by anything, modals or not.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77825
No description provided.